Backgrounds, colors, shades, sizing, numeric system, spacing, typography, borders

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 </head>
 
-<body>
+<body class="h-screen bg-black">
 
-    <header>
+    <header class="py-4 px-6 bg-gray-900">
         <div>
             <div class="logo">
                 <svg viewBox="0 0 192 37" fill="none"
@@ -87,8 +87,8 @@
                     </a>
                 </li>
                 <li>
-                    <strong>Mayk Brito</strong>
-                    <img src="https://avatars3.githubusercontent.com/u/6643122?v=4" alt="Mayk Brito Profile">
+                    <strong class="text-gray-300">Thalles Gabriel</strong>
+                    <img class="border-2 border-green-600 rounded-full w-12 h-12" src="https://avatars.githubusercontent.com/u/62181023?s=460&u=db430afef12ff5d66f242b41b14bb72f97b4a230&v=4" alt="Thalles Gabriel Profile">
                 </li>
             </ul>
         </nav>
