--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body class="h-screen bg-black">
 
-    <header class="py-4 px-6 bg-gray-900">
+    <header class="flex justify-between items-center py-4 px-6 bg-gray-900">
         <div>
             <div class="logo">
                 <svg viewBox="0 0 192 37" fill="none"
@@ -64,7 +64,7 @@
         
         <nav>
             <ul class="flex items-center">
-                <li>
+                <li class="p-3">
                     <a href="#">
                         <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" size="24"
                             color="#A8A8B3" height="24" width="24" xmlns="http://www.w3.org/2000/svg"
@@ -75,7 +75,7 @@
                         </svg>
                     </a>
                 </li>
-                <li>
+                <li class="p-3">
                     <a href="#">
                         <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" size="24"
                             color="#A8A8B3" height="24" width="24" xmlns="http://www.w3.org/2000/svg"
@@ -86,9 +86,9 @@
                         </svg>
                     </a>
                 </li>
-                <li>
-                    <strong class="text-gray-300">Thalles Gabriel</strong>
-                    <img class="border-2 border-green-600 rounded-full w-12 h-12" src="https://avatars.githubusercontent.com/u/62181023?s=460&u=db430afef12ff5d66f242b41b14bb72f97b4a230&v=4" alt="Thalles Gabriel Profile">
+                <li class="flex items-center">
+                    <strong class="text-gray-300 hidden sm:inline ml-4">Thalles Gabriel</strong>
+                    <img class="border-2 border-green-600 rounded-full w-12 h-12 ml-4" src="https://avatars.githubusercontent.com/u/62181023?s=460&u=db430afef12ff5d66f242b41b14bb72f97b4a230&v=4" alt="Thalles Gabriel Profile">
                 </li>
             </ul>
         </nav>
