Inheritance of styles

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </header>
 
 
-    <main>
+    <main class="text-gray-300 text-center">
         <section>
 
             <h2 class="sr-only">Starter</h2>
