Accessibility class: "sr-only"

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <main class="text-gray-300 text-center">
         <section>
 
-            <h2 class="sr-only">Starter</h2>
+            <h2 class="sr-only">Starter</h2> <!-- Accessibility class: As the screen reader cannot read the SVG, we leave a title with the text and the class "sr-only" -->
 
             <svg class="h-auto mx-auto pb-16" width="104" viewBox="0 0 134 142" fill="none">
                 <path opacity="0.5"
