--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 
     <main class="text-gray-300 text-center p-6">
-        <section class="bg-gray-900 p-16 mt-8 rounded flex flex-col items-center transform transition-all duration-200 hover:-translate-y-3">
+        <section class="bg-gray-900 p-16 mt-8 rounded flex flex-col items-center transform transition-all duration-200 cursor-pointer hover:-translate-y-3">
 
             <h2 class="sr-only">Starter</h2> <!-- Accessibility class: As the screen reader cannot read the SVG, we leave a title with the text and the class "sr-only" -->
 
@@ -121,7 +121,7 @@
         </section>
 
 
-        <section class="bg-gray-900 p-16 mt-8 rounded flex flex-col items-center transform hover:-translate-y-3 transition-all duration-200">
+        <section class="bg-gray-900 p-16 mt-8 rounded flex flex-col items-center transform cursor-pointer hover:-translate-y-3 transition-all duration-200">
 
             <h2 class="sr-only">Launchbase</h2>
             <svg class="h-auto mx-auto pb-16" width="174" viewBox="0 0 236 148" fill="none">
@@ -146,7 +146,7 @@
             </p>
         </section>
 
-        <section class="bg-gray-900 p-16 mt-8 rounded flex flex-col items-center transform hover:-translate-y-3 transition-all duration-200">
+        <section class="bg-gray-900 p-16 mt-8 rounded flex flex-col items-center transform cursor-pointer hover:-translate-y-3 transition-all duration-200">
             <h2>GoStack</h2>
             
             
